# telepathy-ssh-contact

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  configure.ac
po/: POTFILES.in
src/: Makefile.am  SSHContact.client  TelepathySSH.client  client-helpers.c  client-helpers.h  client.c  common.c  common.h  org.freedesktop.Telepathy.Client.SSHContact.service.in  org.freedesktop.Telepathy.Client.TelepathySSH.service.in  service.c
src/vinagre/: Makefile.am  connection.c  connection.h  plugin.c  plugin.h  ssh-contact.vinagre-plugin.desktop.in  tab.c  tab.h  tree-view.c  tree-view.h
