AC_INIT(ssh-contact, 0.2)
m4_ifdef([AM_SILENT_RULES],[AM_SILENT_RULES([yes])])

AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
AC_CONFIG_HEADERS([config.h])
AM_MAINTAINER_MODE

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
AM_PROG_LIBTOOL

PKG_CHECK_MODULES(SSH_CONTACT,
[
  telepathy-glib >= 0.11.9
  glib-2.0 >= 2.24
  gio-2.0
  gio-unix-2.0
])

AC_OUTPUT([
Makefile
src/Makefile
])
